@@ -1,3 +1,9 @@
+2009-06-23  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* kern/i386/pc/startup.S (real_to_prot): Access `gdtdesc' using
+	segment 0x0 unconditionally, because the reference generated by
+	GAS is an absolute address.
+
 2009-06-22  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* include/grub/i386/kernel.h: Include `<grub/machine/machine.h>'.
